# delhivery-hackathon-claude

./: .gitignore  CHANGELOG.md  PG_README.md  README.md  SESSION_NOTES.md  WHATS_NEXT.md
commerce_ai/: .env  .env.example  Dockerfile  Dockerfile.etl  Procfile  README.md  config.py  docker-compose.etl.yml  models.py  postgres_schema.sql  pyproject.toml  start.py  top_merchant.txt
commerce_ai/ai/: __init__.py  insights.py  knowledge_graph.py  next_best_action.py  risk_reasoning.py  scoring.py
commerce_ai/api/: __init__.py  app.py  routes.py
commerce_ai/benchmark/: __init__.py  app.py  generate_data.py
commerce_ai/benchmark/frontend/: index.html  package-lock.json  package.json
commerce_ai/communication/: __init__.py  issue_router.py  voice_ai_client.py  whatsapp_client.py
commerce_ai/data/: __init__.py  db.py  generate_sample_data.py  load_data.py  queries.py
commerce_ai/data/sample/: interventions.csv  merchants.csv  orders.csv  warehouse_nodes.csv
commerce_ai/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.cjs
commerce_ai/frontend/src/: App.tsx
commerce_ai/scripts/: load_postgres.py  load_production_data.py  train_models.py  validate_postgres.py
commerce_ai/services/: action_executor.py  auto_cancel.py  demand_advisor.py  guardrails.py  impulse_detector.py  order_engine.py  outbound_orchestrator.py
commerce_ai/tests/unit/: test_action_executor.py  test_api.py  test_auto_cancel.py  test_db.py  test_demand_advisor.py  test_guardrails.py  test_impulse_detector.py  test_insights.py  test_issue_router.py  (+10 more)
(+12 files in other folders)
