[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delhivery-commerce-ai"
version = "0.1.0"
description = "Merchant-facing intelligence layer for Delhivery Commerce"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "xgboost>=2.0.0",
    "scikit-learn>=1.3.0",
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "networkx>=3.2.0",
    "pandas>=2.1.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.90.0",
    "httpx>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["."]
include = ["ai*", "api*", "data*", "services*", "communication*"]
